Added top and bottom shadows to HomeViewController. Added 'YOU' Anonymous labels

--- a/Jungle/Base.lproj/Main.storyboard
+++ b/Jungle/Base.lproj/Main.storyboard
@@ -330,7 +330,7 @@
             <objects>
                 <viewController id="BIt-fI-Gyb" customClass="HomeViewController" customModule="Jungle" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8Ey-ri-rtM">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="dMn-Bt-0xe"/>
@@ -392,7 +392,7 @@
             <objects>
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="5Oa-M9-5sk" customClass="MainTabBarController" customModule="Jungle" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="48v-SG-cJC">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="48v-SG-cJC">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -414,7 +414,7 @@
             <objects>
                 <viewController id="bii-lP-RwO" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="cHP-Rp-kVi">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="UuY-eW-e5W"/>
@@ -449,7 +449,7 @@
             <objects>
                 <viewController id="1nt-Mo-g1B" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5k6-xg-5j0">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="e0C-KV-C01"/>
@@ -484,7 +484,7 @@
             <objects>
                 <viewController id="0ug-nU-rT3" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="xOc-Wg-3P3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="ubB-0K-gML"/>
@@ -519,7 +519,7 @@
             <objects>
                 <viewController id="Ooo-dC-FoE" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2Mq-4s-90w">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="tnA-hX-IU2"/>
