--- a/Jungle/CommentBar.xib
+++ b/Jungle/CommentBar.xib
@@ -5,46 +5,88 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="Montserrat-SemiBold.otf">
-            <string>Montserrat-SemiBold</string>
+        <array key="Montserrat-Regular.otf">
+            <string>Montserrat-Regular</string>
         </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="300" height="44"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CommentBar" customModule="Jungle" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="428" height="134"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MaI-Xz-aVm">
-                    <rect key="frame" x="256" y="0.0" width="44" height="44"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="MaI-Xz-aVm" secondAttribute="height" multiplier="1:1" id="3CU-qD-Zar"/>
-                    </constraints>
-                </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add a reply..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3lg-Jf-n2t">
-                    <rect key="frame" x="16" y="13.5" width="98.5" height="18.5"/>
-                    <fontDescription key="fontDescription" name="Montserrat-SemiBold" family="Montserrat" pointSize="15"/>
-                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="0v8-SJ-p1x">
+                    <rect key="frame" x="0.0" y="0.0" width="428" height="134"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iwk-ZT-mjL">
+                            <rect key="frame" x="0.0" y="0.0" width="428" height="32"/>
+                            <color key="backgroundColor" red="0.37915961370000001" green="0.88489718260000005" blue="0.47243525120000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="32" id="yNO-g8-8Wb"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3a4-FS-wk6">
+                            <rect key="frame" x="0.0" y="32" width="428" height="58"/>
+                            <subviews>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tuv-Bt-05u">
+                                    <rect key="frame" x="4" y="4" width="420" height="50"/>
+                                    <subviews>
+                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Hello its me!" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="RKd-q9-vCb">
+                                            <rect key="frame" x="4" y="4" width="412" height="42"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="17"/>
+                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        </textView>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.90625" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="RKd-q9-vCb" secondAttribute="trailing" constant="4" id="EzO-BC-dAm"/>
+                                        <constraint firstItem="RKd-q9-vCb" firstAttribute="leading" secondItem="tuv-Bt-05u" secondAttribute="leading" constant="4" id="IBh-kF-kFE"/>
+                                        <constraint firstAttribute="bottom" secondItem="RKd-q9-vCb" secondAttribute="bottom" constant="4" id="OO6-Da-IVp"/>
+                                        <constraint firstItem="RKd-q9-vCb" firstAttribute="top" secondItem="tuv-Bt-05u" secondAttribute="top" constant="4" id="z5U-oI-tkP"/>
+                                    </constraints>
+                                </view>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="bottom" secondItem="tuv-Bt-05u" secondAttribute="bottom" constant="4" id="Mp6-Dw-by4"/>
+                                <constraint firstItem="tuv-Bt-05u" firstAttribute="top" secondItem="3a4-FS-wk6" secondAttribute="top" constant="4" id="VVj-kk-HLL"/>
+                                <constraint firstItem="tuv-Bt-05u" firstAttribute="leading" secondItem="3a4-FS-wk6" secondAttribute="leading" constant="4" id="azR-FE-Bi1"/>
+                                <constraint firstAttribute="trailing" secondItem="tuv-Bt-05u" secondAttribute="trailing" constant="4" id="kT2-gP-cvb"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h23-Z2-hoi">
+                            <rect key="frame" x="0.0" y="90" width="428" height="44"/>
+                            <color key="backgroundColor" red="0.37915961370000001" green="0.88489718260000005" blue="0.47243525120000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="44" id="okU-i2-sCc"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                </stackView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="MaI-Xz-aVm" secondAttribute="trailing" id="81Q-Jb-fBY"/>
-                <constraint firstItem="MaI-Xz-aVm" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="IYU-zj-3eM"/>
-                <constraint firstItem="3lg-Jf-n2t" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="SFL-Xk-ttZ"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="MaI-Xz-aVm" secondAttribute="bottom" id="t5n-ha-fcn"/>
-                <constraint firstItem="3lg-Jf-n2t" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="wEl-7x-Sei"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="0v8-SJ-p1x" secondAttribute="trailing" id="PPf-1b-rBT"/>
+                <constraint firstItem="0v8-SJ-p1x" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="p2y-tp-7I0"/>
+                <constraint firstItem="0v8-SJ-p1x" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="qRp-zl-2x1"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="0v8-SJ-p1x" secondAttribute="bottom" id="rzR-bo-50Y"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="33" y="-154"/>
+            <connections>
+                <outlet property="bottomView" destination="h23-Z2-hoi" id="kEH-rc-QKH"/>
+                <outlet property="textBubbleView" destination="tuv-Bt-05u" id="9ib-BV-9NT"/>
+                <outlet property="textContainerView" destination="3a4-FS-wk6" id="3Bq-hE-CFU"/>
+                <outlet property="textView" destination="RKd-q9-vCb" id="bQj-Oa-hyb"/>
+                <outlet property="topView" destination="iwk-ZT-mjL" id="Sp5-t6-3Yy"/>
+            </connections>
+            <point key="canvasLocation" x="-228" y="-112"/>
         </view>
     </objects>
 </document>
